fix: incorrect display of content of size-picker__tooltip-btn HTML-el on mobile screens

--- a/src/assets/styles/_media.scss
+++ b/src/assets/styles/_media.scss
@@ -50,6 +50,15 @@
         display: inline-block;
         margin-bottom: 5px;
     }
+
+    .size-picker__tooltip-btn {
+
+        &::before,
+        &::after {
+            left: 5%;
+            transform: translateX(0%) translateY(var(--translateY, 0)) scale(var(--scale));
+        }
+    }
 }
 
 @media screen and (max-width: 1024px) {
